# phoenix-firestorm_kc

./: .gitignore  fs_build.sh  kc_build.sh
indra/: CMakeLists.txt
indra/cmake/: CMakeLists.txt  Copy3rdPartyLibs.cmake  FindnvJPEG2k.cmake  LLImageJ2CnvJPEG2k.cmake  LLKDU.cmake  nvJPEG2k.cmake
indra/llimage/: CMakeLists.txt  llimagej2c.h
indra/llimagej2cjasper/: CMakeLists.txt
indra/llimagej2cnvjpeg2k/: CMakeLists.txt  llimagej2cnvjpeg2k.cpp  llimagej2cnvjpeg2k.h
indra/llkdu/: CMakeLists.txt  llimagej2ckdu.cpp
indra/llui/: llfloater.cpp  llfloater.h  llpanel.h  llresizehandle.cpp  llresizehandle.h
indra/newview/: fscommon.cpp  llappviewer.cpp  llfloaterhoverheight.cpp  lltexturefetch.cpp
indra/newview/app_settings/: commands.xml
indra/newview/skins/default/textures/: textures.xml
indra/newview/skins/default/xui/en/: panel_preferences_graphics1.xml  strings.xml
indra/newview/skins/latency/: colors.xml
